--- a/web/src/app/components/unmanaged-models-result/unmanaged-models-result.component.html
+++ b/web/src/app/components/unmanaged-models-result/unmanaged-models-result.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="result$ | async as result">
-  <ng-container *ngIf="hasModels(result)">
+  <ng-container *ngIf="result.success && hasModels(result.value)">
     <h1>Unmanaged Schemas</h1>
     <p>
       The below schemas are not managed by OpenAlchemy, follow the information
       below to add them to the managed schemas.
     </p>
 
-    <ng-container *ngFor="let model of result.models | keyvalue">
+    <ng-container *ngFor="let model of result.value.models | keyvalue">
       <app-unmanaged-model-result
         [name]="model.key"
         [model]="model.value"
