--- a/web/src/app/components/base/base.component.html
+++ b/web/src/app/components/base/base.component.html
@@ -4,6 +4,7 @@
 </div>
 
 <div class="result">
+  <app-package></app-package>
   <app-models-result></app-models-result>
   <app-unmanaged-models-result></app-unmanaged-models-result>
 </div>
