embed info state deeper

--- a/web/src/app/components/package/package.component.html
+++ b/web/src/app/components/package/package.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="spec$ | async as spec">
-  <app-spec-information [spec]="spec"></app-spec-information>
+  <app-spec-information [specInfo]="spec.info"></app-spec-information>
   <app-save [spec]="spec"></app-save>
 </ng-container>
