--- a/web/src/app/components/package/spec-information/spec-information.component.html
+++ b/web/src/app/components/package/spec-information/spec-information.component.html
@@ -1,17 +1,18 @@
 <h1>Specification Information</h1>
 <p>
-  <ng-container *ngIf="spec?.title"
-    ><span [attr.test-id]="selector + '.title'">title: {{ spec.title }}</span
+  <ng-container *ngIf="specInfo?.title"
+    ><span [attr.test-id]="selector + '.title'"
+      >title: {{ specInfo.title }}</span
     ><br
   /></ng-container>
-  <ng-container *ngIf="spec?.version?.value"
+  <ng-container *ngIf="specInfo?.version?.value"
     ><span [attr.test-id]="selector + '.version'"
-      >version: {{ spec.version.value }}</span
+      >version: {{ specInfo.version.value }}</span
     ><br
   /></ng-container>
-  <ng-container *ngIf="spec?.description"
+  <ng-container *ngIf="specInfo?.description"
     ><span [attr.test-id]="selector + '.description'"
-      >description: {{ spec.description }}</span
+      >description: {{ specInfo.description }}</span
     ><br
   /></ng-container>
 </p>
