define logic for save being disabled

--- a/web/src/app/components/package/save/save.component.html
+++ b/web/src/app/components/package/save/save.component.html
@@ -38,7 +38,13 @@
   <button
     mat-raised-button
     color="primary"
-    [disabled]="!spec?.info?.version?.valid"
+    [disabled]="
+      !(
+        spec?.info?.version?.valid === true &&
+        spec?.beingEdited === false &&
+        spec?.valid === true
+      )
+    "
     [attr.test-id]="selector + '.save'"
   >
     Save</button
