add information about whether spec is valid

--- a/web/src/app/components/package/save/save.component.html
+++ b/web/src/app/components/package/save/save.component.html
@@ -3,6 +3,12 @@
   Save this specification to install the models using pip.<br />
 
   <app-check
+    [description]="'schemas valid:'"
+    [value]="spec?.valid === true"
+    [hint]="specHint"
+    [attr.test-id]="selector + '.spec-valid'"
+  ></app-check>
+  <app-check
     [description]="'package version (based on specification) valid:'"
     [value]="spec?.info?.version?.valid === true"
     [hint]="versionHint"
