add login component

--- a/web/src/app/components/base/base.component.html
+++ b/web/src/app/components/base/base.component.html
@@ -4,6 +4,7 @@
 </div>
 
 <div class="result">
+  <app-login class="login"></app-login>
   <app-package-base></app-package-base>
   <app-models-result></app-models-result>
   <app-unmanaged-models-result></app-unmanaged-models-result>
