--- a/web/src/app/components/base/base.component.html
+++ b/web/src/app/components/base/base.component.html
@@ -9,3 +9,4 @@
   <app-models-result></app-models-result>
   <app-unmanaged-models-result></app-unmanaged-models-result>
 </div>
+<app-error-display></app-error-display>
