write save loading state into components

--- a/web/src/app/components/package/package-base/package-base.component.html
+++ b/web/src/app/components/package/package-base/package-base.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngIf="spec$ | async as spec">
   <app-spec-information [specInfo]="spec.info"></app-spec-information>
-  <app-save [spec]="spec"></app-save>
+  <ng-container *ngIf="save$ | async as save"
+    ><app-save [spec]="spec" [save]="save"></app-save
+  ></ng-container>
 </ng-container>
