add selecting actual name for customer spec

--- a/web/src/app/components/package/save/save.component.html
+++ b/web/src/app/components/package/save/save.component.html
@@ -22,7 +22,9 @@
       [attr.test-id]="selector + '.input'"
       matInput
       #name
-      value="{{ spec?.info?.proposedName }}"
+      value="{{
+        spec?.info?.actualName ? spec.info.actualName : spec?.info?.proposedName
+      }}"
     /> </mat-form-field
   ><br />
   <button
