add component for pip install

--- a/web/src/app/components/package/package-base/package-base.component.html
+++ b/web/src/app/components/package/package-base/package-base.component.html
@@ -3,4 +3,5 @@
   <ng-container *ngIf="save$ | async as save"
     ><app-save [spec]="spec" [save]="save"></app-save
   ></ng-container>
+  <app-pip [spec]="spec"></app-pip>
 </ng-container>
