--- a/web/src/app/components/package/pip/pip.component.html
+++ b/web/src/app/components/package/pip/pip.component.html
@@ -15,7 +15,7 @@
       </p>
 
       <button
-        [attr.test-id]="selector + '.copy'"
+        [attr.test-id]="selector + '.copy-install'"
         ngxClipboard
         [cbContent]="
           calculatePipInstall(
@@ -36,6 +36,18 @@
       <p [attr.test-id]="selector + '.import'">
         {{ calculateImport(spec.info.id) }}
       </p>
+
+      <button
+        [attr.test-id]="selector + '.copy-import'"
+        ngxClipboard
+        [cbContent]="calculateImport(spec.info.id)"
+        mat-raised-button
+        color="basic"
+      >
+        Copy
+      </button>
+      <br />
+      <br />
     </ng-container>
   </ng-container>
 </ng-container>
