--- a/web/src/app/components/base/base.component.html
+++ b/web/src/app/components/base/base.component.html
@@ -10,3 +10,4 @@
   <app-unmanaged-models-result></app-unmanaged-models-result>
 </div>
 <app-error-display></app-error-display>
+<app-footer class="footer"></app-footer>
